[metadata]
name = Freeze Pop
version = 0.3.1
author = T Morrill
author_email = morrill.math@gmail.com
license = MIT
description = Generates MIDI files
long_description = file: README.md
long_description_content_type= text/markdown
url = https://github.com/tsmorrill/Freeze-Pop

[options]
packages = frzpop
install_requires =
    midiutil
    importlib-metadata; python_version >= "3.9"
