[metadata]
name = Freeze Pop
version = 0.4.1
author = T Morrill
author_email = morrill.math@gmail.com
license = MIT
description = Generates MIDI files
long_description = file: README.md
long_description_content_type= text/markdown
url = https://github.com/tsmorrill/Freeze-Pop

[options]
packages = frzpop
python_requires = >=3.9
install_requires =
    midiutil >= 1.2.1
