[metadata]
name = frzpop
version = 0.4.2
author = T Morrill
author_email = morrill.math@gmail.com
license = MIT
description = Generates MIDI files
long_description = file: README.md
long_description_content_type= text/markdown
url = https://github.com/tsmorrill/Freeze-Pop

[options]
packages = frzpop
install_requires =
    midiutil >= 1.2.1
